--- a/RZDKursovoy/packages.config
+++ b/RZDKursovoy/packages.config
@@ -3,7 +3,9 @@
   <package id="Dragablz" version="0.0.3.203" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.8.1" targetFramework="net461" />
+  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net461" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.0.6" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
-  <package id="OpenHtmlToPdf" version="1.12.0.0" targetFramework="net461" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net461" />
 </packages>
