--- a/RZDKursovoy/RZDKursovoy.csproj
+++ b/RZDKursovoy/RZDKursovoy.csproj
@@ -189,6 +189,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Properties\PersonalData.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
