--- a/RZDKursovoy/RZDKursovoy.csproj
+++ b/RZDKursovoy/RZDKursovoy.csproj
@@ -147,6 +147,24 @@
       <DependentUpon>Authorization.xaml</DependentUpon>
     </Compile>
     <Compile Include="BestErrors.cs" />
+    <Compile Include="Dispatcher_AddArrivalForm.xaml.cs">
+      <DependentUpon>Dispatcher_AddArrivalForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dispatcher_AddDepartureForm.xaml.cs">
+      <DependentUpon>Dispatcher_AddDepartureForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dispatcher_AddRailcarForm.xaml.cs">
+      <DependentUpon>Dispatcher_AddRailcarForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dispatcher_AddRoutForm.xaml.cs">
+      <DependentUpon>Dispatcher_AddRoutForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dispatcher_AddStopForm.xaml.cs">
+      <DependentUpon>Dispatcher_AddStopForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dispatcher_AddTrainForm.xaml.cs">
+      <DependentUpon>Dispatcher_AddTrainForm.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dispatcher_Interface_In_To_Face.xaml.cs">
       <DependentUpon>Dispatcher_Interface_In_To_Face.xaml</DependentUpon>
     </Compile>
@@ -173,6 +191,30 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ApplicationLogic.cs" />
+    <Page Include="Dispatcher_AddArrivalForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dispatcher_AddDepartureForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dispatcher_AddRailcarForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dispatcher_AddRoutForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dispatcher_AddStopForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dispatcher_AddTrainForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dispatcher_Interface_In_To_Face.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
