--- a/RZDKursovoy/RZDKursovoy.csproj
+++ b/RZDKursovoy/RZDKursovoy.csproj
@@ -7,14 +7,14 @@
     <ProjectGuid>{EADC17AA-F66F-4E2E-967E-3FF5EF5EDF66}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>RZDKursovoy</RootNamespace>
-    <AssemblyName>RZDKursovoy</AssemblyName>
+    <AssemblyName>Билеты</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Евгений\Desktop\</PublishUrl>
+    <PublishUrl>C:\Users\Евгений\Google Диск\MGKIT\3 курс 2 семестр\ЛАРИОНОВА\КУРСОВОЙ\v2.0\Приложение\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -50,16 +50,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>E7D89499CE5D21D95AC7F38F4F90762C957CEE9A</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>9680F12B90D634C7F1886AA966FF2886375FCDFB</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>RZDKursovoy_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>RZDKursovoy_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>TextTemplate.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BespokeFusion, Version=1.0.1.10, Culture=neutral, processorArchitecture=MSIL">
@@ -269,6 +278,7 @@
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\PersonalData.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>PersonalData.Designer.cs</LastGenOutput>
@@ -277,6 +287,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="RZDKursovoy_1_TemporaryKey.pfx" />
     <None Include="RZDKursovoy_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -298,6 +309,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="SQL\userScripts.sql" />
+    <Resource Include="TextTemplate.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
